# rtype

./: .gitignore  CMakeLists.txt  flake.nix
.github/workflows/: ci.yml
client/main/: main.cpp
scripts/: server.sh
server/: CMakeLists.txt
server/main/: main.cpp
src/: CMakeLists.txt
src/adapters/: CMakeLists.txt
src/adapters/include/adapters/logger/: ConsoleLogger.hpp
src/adapters/src/logger/: ConsoleLogger.cpp
src/app/: CMakeLists.txt
src/app/include/app/: CalculatorService.hpp
src/app/src/: CalculatorService.cpp
src/core/: CMakeLists.txt
src/core/include/core/: Math.hpp
src/core/src/: Math.cpp
src/ports/: CMakeLists.txt
src/ports/include/ports/: Logger.hpp
